# Scrubline

./: AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: validate.yml
src/: cli.rs  error.rs  json.rs  main.rs  output.rs  redact.rs  stream.rs
tests/: cli.rs
tests/fixtures/: events-expected.jsonl  events-input.jsonl
